--- a/index.html
+++ b/index.html
@@ -3,20 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZeeshanBooks - Your Online Bookstore</title>
+    <meta name="description" content="ZeeshanStore - Your trusted online store for quality products at affordable prices with fast delivery across Pakistan">
+    <meta name="keywords" content="online store, shopping, products, Pakistan, Lahore, ecommerce">
+    <meta name="author" content="Mubashar Ghazi">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://zeeshanstore.github.io/index.html">
+    <title>ZeeshanStore - Your Online Store</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        primary: '#667eea',
+                        secondary: '#764ba2', 
+                        accent: '#f093fb'
+                    }
+                }
+            }
+        }
+    </script>
 </head>
 <body>
     <!-- Header -->
     <header class="header">
         <div class="container">
             <div class="header-content">
-                <h1 class="logo"><i class="fas fa-book"></i> ZeeshanBooks</h1>
+                <a href="index.html" class="logo-link">
+                    <h1 class="logo"><i class="fas fa-store"></i> ZeeshanStore</h1>
+                </a>
                 <nav class="nav-menu">
                     <ul class="nav-list">
                         <li><a href="index.html" class="nav-link active">Home</a></li>
-                        <li><a href="products.html" class="nav-link">Books</a></li>
+                        <li><a href="products.html" class="nav-link">Products</a></li>
                         <li><a href="about.html" class="nav-link">About</a></li>
                         <li><a href="contact.html" class="nav-link">Contact</a></li>
                     </ul>
@@ -34,24 +55,42 @@
         </div>
     </header>
 
+    <!-- Mobile Menu Overlay -->
+    <div class="mobile-menu-overlay" id="mobileMenuOverlay">
+        <div class="mobile-menu">
+            <div class="mobile-menu-header">
+                <h3><i class="fas fa-store"></i> ZeeshanStore</h3>
+                <button class="close-mobile-menu" id="closeMobileMenu">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+            <nav class="mobile-nav">
+                <a href="index.html" class="mobile-nav-link">Home</a>
+                <a href="products.html" class="mobile-nav-link">Products</a>
+                <a href="about.html" class="mobile-nav-link">About</a>
+                <a href="contact.html" class="mobile-nav-link">Contact</a>
+            </nav>
+        </div>
+    </div>
+
     <!-- Main Content -->
     <main class="main">
         <div class="container">
             <!-- Hero Section -->
             <section class="hero">
-                <h2>Discover Amazing Books</h2>
-                <p>Quality books at affordable prices with fast delivery</p>
-                <a href="products.html" class="cta-btn">Browse Books</a>
+                <h2>Discover Amazing Products</h2>
+                <p>Quality products at affordable prices with fast delivery</p>
+                <a href="products.html" class="cta-btn">Browse Products</a>
             </section>
 
             <!-- Featured Products -->
             <section class="featured-products">
-                <h3>Featured Books</h3>
+                <h3>Featured Products</h3>
                 <div class="products-grid" id="featuredProductsGrid">
                     <!-- Featured products will be dynamically loaded here -->
                 </div>
                 <div class="text-center">
-                    <a href="products.html" class="view-all-btn">View All Books</a>
+                    <a href="products.html" class="view-all-btn">View All Products</a>
                 </div>
             </section>
 
@@ -76,8 +115,8 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h4>ZeeshanBooks</h4>
-                    <p>Quality books at affordable prices with exceptional customer service.</p>
+                    <h4>ZeeshanStore</h4>
+                    <p>Quality products at affordable prices with exceptional customer service.</p>
                     <div class="social-links">
                         <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
                         <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
@@ -96,15 +135,15 @@
                 <div class="footer-section">
                     <h4>Contact Info</h4>
                     <div class="contact-info">
-                        <p><i class="fas fa-phone"></i> +92 300 1234567</p>
-                        <p><i class="fas fa-envelope"></i> info@zeeshanbooks.com</p>
-                        <p><i class="fas fa-map-marker-alt"></i> Karachi, Pakistan</p>
+                        <p><i class="fas fa-phone"></i> +92 300 4640712</p>
+                        <p><i class="fas fa-envelope"></i> zeeshanstore@gmail.com</p>
+                        <p><i class="fas fa-map-marker-alt"></i> Lahore, Pakistan</p>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 ZeeshanBooks. All rights reserved.</p>
-                <p class="watermark">Developed by <strong>Mubashar Ghazi</strong></p>
+                <p>&copy; 2025 ZeeshanStore. All rights reserved.</p>
+                <p class="watermark">Developed by <strong><a href="https://mubasharghazi.dev" target="_blank" rel="noopener noreferrer">Mubashar Ghazi</a></strong></p>
             </div>
         </div>
     </footer>
@@ -207,10 +246,8 @@
         <div class="spinner"></div>
     </div>
 
-    <!-- Watermark -->
-    <div class="watermark-overlay">
-        <span>Developed by Mubashar Ghazi</span>
-    </div>
+    <!-- Notification Container -->
+    <div id="notificationContainer" class="notification-container"></div>
 
     <script src="script.js"></script>
 </body>
