--- a/products.html
+++ b/products.html
@@ -3,20 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Books - ZeeshanBooks - Your Online Bookstore</title>
+    <meta name="description" content="Browse our complete collection of quality products at ZeeshanStore - Great prices and fast delivery">
+    <meta name="keywords" content="products, online shopping, ZeeshanStore, Pakistan">
+    <title>Products - ZeeshanStore - Your Online Store</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        primary: '#667eea',
+                        secondary: '#764ba2', 
+                        accent: '#f093fb'
+                    }
+                }
+            }
+        }
+    </script>
 </head>
 <body>
     <!-- Header -->
     <header class="header">
         <div class="container">
             <div class="header-content">
-                <h1 class="logo"><i class="fas fa-book"></i> ZeeshanBooks</h1>
+                <a href="index.html" class="logo-link">
+                    <h1 class="logo"><i class="fas fa-store"></i> ZeeshanStore</h1>
+                </a>
                 <nav class="nav-menu">
                     <ul class="nav-list">
                         <li><a href="index.html" class="nav-link">Home</a></li>
-                        <li><a href="products.html" class="nav-link active">Books</a></li>
+                                                <li><a href="products.html" class="nav-link active">Products</a></li>
                         <li><a href="about.html" class="nav-link">About</a></li>
                         <li><a href="contact.html" class="nav-link">Contact</a></li>
                     </ul>
@@ -34,39 +52,31 @@
         </div>
     </header>
 
+    <!-- Mobile Menu Overlay -->
+    <div class="mobile-menu-overlay" id="mobileMenuOverlay">
+        <div class="mobile-menu">
+            <div class="mobile-menu-header">
+                <h3><i class="fas fa-store"></i> ZeeshanStore</h3>
+                <button class="close-mobile-menu" id="closeMobileMenu">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+            <nav class="mobile-nav">
+                <a href="index.html" class="mobile-nav-link">Home</a>
+                <a href="products.html" class="mobile-nav-link">Products</a>
+                <a href="about.html" class="mobile-nav-link">About</a>
+                <a href="contact.html" class="mobile-nav-link">Contact</a>
+            </nav>
+        </div>
+    </div>
+
     <!-- Main Content -->
     <main class="main">
         <div class="container">
             <!-- Page Header -->
             <section class="page-header">
-                <h2>Our Book Collection</h2>
-                <p>Discover our complete collection of amazing books across all genres</p>
-            </section>
-
-            <!-- Search and Filter Section -->
-            <section class="search-filter-section">
-                <div class="search-container">
-                    <input type="text" id="searchInput" placeholder="Search books..." class="search-input">
-                    <i class="fas fa-search search-icon"></i>
-                </div>
-                <div class="filter-container">
-                    <select id="categoryFilter" class="filter-select">
-                        <option value="">All Categories</option>
-                        <option value="finance">Finance</option>
-                        <option value="self-help">Self Help</option>
-                        <option value="business">Business</option>
-                        <option value="fiction">Fiction</option>
-                        <option value="spirituality">Spirituality</option>
-                        <option value="history">History</option>
-                    </select>
-                    <select id="priceFilter" class="filter-select">
-                        <option value="">All Prices</option>
-                        <option value="0-600">Under PKR 600</option>
-                        <option value="600-800">PKR 600 - 800</option>
-                        <option value="800-1000">PKR 800 - 1000</option>
-                        <option value="1000+">Above PKR 1000</option>
-                    </select>
-                </div>
+                <h2>Our Product Collection</h2>
+                <p>Discover our complete collection of amazing products across all categories</p>
             </section>
 
             <!-- Products Grid -->
@@ -94,8 +104,8 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h4><i class="fas fa-book"></i> ZeeshanBooks</h4>
-                    <p>Your trusted online bookstore offering amazing books at great prices with exceptional service.</p>
+                    <h4><i class="fas fa-store"></i> ZeeshanStore</h4>
+                    <p>Your trusted online store offering amazing products at great prices with exceptional service.</p>
                     <div class="social-links">
                         <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
                         <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
@@ -114,15 +124,15 @@
                 <div class="footer-section">
                     <h4>Contact Info</h4>
                     <div class="contact-info">
-                        <p><i class="fas fa-phone"></i> +92 300 1234567</p>
-                        <p><i class="fas fa-envelope"></i> info@zeeshanbooks.com</p>
-                        <p><i class="fas fa-map-marker-alt"></i> Karachi, Pakistan</p>
+                        <p><i class="fas fa-phone"></i> +92 300 4640712</p>
+                        <p><i class="fas fa-envelope"></i> zeeshanstore@gmail.com</p>
+                        <p><i class="fas fa-map-marker-alt"></i> Lahore, Pakistan</p>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 ZeeshanBooks. All rights reserved.</p>
-                <p class="watermark">Developed by <strong>Mubashar Ghazi</strong></p>
+                <p>&copy; 2025 ZeeshanStore. All rights reserved.</p>
+                <p class="watermark">Developed by <strong><a href="https://mubasharghazi.dev" target="_blank" rel="noopener noreferrer">Mubashar Ghazi</a></strong></p>
             </div>
         </div>
     </footer>
@@ -222,11 +232,6 @@
     <!-- Loading Spinner -->
     <div class="loading-spinner" id="loadingSpinner">
         <div class="spinner"></div>
-    </div>
-
-    <!-- Watermark -->
-    <div class="watermark-overlay">
-        <span>Developed by Mubashar Ghazi</span>
     </div>
 
     <script src="script.js"></script>
