--- a/about.html
+++ b/about.html
@@ -83,117 +83,57 @@
                 <div class="story-content">
                     <div class="story-text">
                         <h3>Our Story</h3>
-                        <p>Founded with a passion for books and learning, ZeeshanBooks began with a simple mission: to make amazing books accessible to everyone at affordable prices. What started as a dream to create Pakistan's premier online bookstore has grown into a trusted destination for book lovers.</p>
-                        <p>We believe that knowledge should be accessible to all, and books are the gateway to wisdom, growth, and inspiration. Our commitment to curating the best collection of books across all genres has been the cornerstone of our success.</p>
+                        <p>Founded with a passion for quality products and exceptional service, ZeeshanStore began with a simple mission: to make amazing products accessible to everyone at affordable prices. What started as a dream to create Pakistan's premier online store has grown into a trusted destination for shoppers.</p>
+                        <p>We believe that quality should be accessible to all, and our products are carefully selected to bring you the best value for your money. Our commitment to customer satisfaction has been the cornerstone of our success.</p>
                     </div>
                     <div class="story-image">
-                        <img src="https://images.unsplash.com/photo-1481627834876-b7833e8f5570?w=400&h=300&fit=crop&crop=center" alt="Our Story">
+                        <img src="https://images.unsplash.com/photo-1556742049-0cfed4f6a45d?w=400&h=300&fit=crop&crop=center" alt="Our Story">
                     </div>
                 </div>
             </section>
 
-            <!-- Mission & Vision -->
+            <!-- Mission & Vision - Simplified -->
             <section class="mission-vision">
                 <div class="mission-card">
                     <div class="card-icon">
                         <i class="fas fa-bullseye"></i>
                     </div>
                     <h3>Our Mission</h3>
-                    <p>To make knowledge accessible to everyone by providing the best collection of books at affordable prices, while fostering a love for reading and continuous learning in our community.</p>
+                    <p>To provide quality products at affordable prices with exceptional customer service, making online shopping simple and accessible for everyone.</p>
                 </div>
                 <div class="vision-card">
                     <div class="card-icon">
                         <i class="fas fa-eye"></i>
                     </div>
                     <h3>Our Vision</h3>
-                    <p>To become Pakistan's most trusted online bookstore, known for our curated selection of transformative books that inspire personal growth, professional development, and lifelong learning.</p>
+                    <p>To become Pakistan's most trusted online store, known for our quality products, competitive prices, and outstanding customer experience.</p>
                 </div>
             </section>
 
-            <!-- Values -->
-            <section class="values-section">
-                <h3>Our Core Values</h3>
-                <div class="values-grid">
-                    <div class="value-item">
-                        <div class="value-icon">
-                            <i class="fas fa-book-open"></i>
+            <!-- Contact Information -->
+            <section class="contact-info-section">
+                <h3>Get in Touch</h3>
+                <div class="contact-cards">
+                    <div class="contact-card">
+                        <div class="contact-icon">
+                            <i class="fas fa-phone"></i>
                         </div>
-                        <h4>Knowledge</h4>
-                        <p>We believe in the transformative power of books and their ability to change lives.</p>
+                        <h4>Phone</h4>
+                        <p>+92 300 4640712</p>
                     </div>
-                    <div class="value-item">
-                        <div class="value-icon">
-                            <i class="fas fa-heart"></i>
+                    <div class="contact-card">
+                        <div class="contact-icon">
+                            <i class="fas fa-envelope"></i>
                         </div>
-                        <h4>Passion</h4>
-                        <p>Our passion for books and learning drives everything we do for our readers.</p>
+                        <h4>Email</h4>
+                        <p>zeeshanstore@gmail.com</p>
                     </div>
-                    <div class="value-item">
-                        <div class="value-icon">
-                            <i class="fas fa-users"></i>
+                    <div class="contact-card">
+                        <div class="contact-icon">
+                            <i class="fas fa-map-marker-alt"></i>
                         </div>
-                        <h4>Community</h4>
-                        <p>Building a community of book lovers and lifelong learners is our joy.</p>
-                    </div>
-                    <div class="value-item">
-                        <div class="value-icon">
-                            <i class="fas fa-lightbulb"></i>
-                        </div>
-                        <h4>Growth</h4>
-                        <p>We believe in continuous personal and professional growth through reading.</p>
-                    </div>
-                </div>
-            </section>
-
-            <!-- Team -->
-            <section class="team-section">
-                <h3>Our Team</h3>
-                <div class="team-grid">
-                    <div class="team-member">
-                        <div class="member-image">
-                            <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=300&h=300&fit=crop&crop=center" alt="Team Member">
-                        </div>
-                        <h4>Zeeshan Ahmad</h4>
-                        <p class="member-role">Founder & Book Curator</p>
-                        <p class="member-description">A passionate reader and entrepreneur, Zeeshan curates our book collection to inspire and transform lives.</p>
-                    </div>
-                    <div class="team-member">
-                        <div class="member-image">
-                            <img src="https://images.unsplash.com/photo-1494790108755-2616b612b786?w=300&h=300&fit=crop&crop=center" alt="Team Member">
-                        </div>
-                        <h4>Sarah Khan</h4>
-                        <p class="member-role">Content Manager</p>
-                        <p class="member-description">Ensuring our book descriptions and recommendations help readers find their perfect next read.</p>
-                    </div>
-                    <div class="team-member">
-                        <div class="member-image">
-                            <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=300&h=300&fit=crop&crop=center" alt="Team Member">
-                        </div>
-                        <h4>Ali Hassan</h4>
-                        <p class="member-role">Customer Experience Lead</p>
-                        <p class="member-description">Dedicated to ensuring every book lover has an amazing experience with ZeeshanBooks.</p>
-                    </div>
-                </div>
-            </section>
-
-            <!-- Stats -->
-            <section class="stats-section">
-                <div class="stats-grid">
-                    <div class="stat-item">
-                        <div class="stat-number">2000+</div>
-                        <div class="stat-label">Happy Readers</div>
-                    </div>
-                    <div class="stat-item">
-                        <div class="stat-number">1000+</div>
-                        <div class="stat-label">Amazing Books</div>
-                    </div>
-                    <div class="stat-item">
-                        <div class="stat-number">50+</div>
-                        <div class="stat-label">Book Categories</div>
-                    </div>
-                    <div class="stat-item">
-                        <div class="stat-number">99%</div>
-                        <div class="stat-label">Reader Satisfaction</div>
+                        <h4>Location</h4>
+                        <p>Lahore, Pakistan</p>
                     </div>
                 </div>
             </section>
