--- a/products.html
+++ b/products.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Browse our complete collection of quality products at ZeeshanStore - Great prices and fast delivery">
     <meta name="keywords" content="products, online shopping, ZeeshanStore, Pakistan">
     <title>Products - ZeeshanStore - Your Online Store</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -234,6 +236,8 @@
         <div class="spinner"></div>
     </div>
 
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
